--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# PyCharm
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/*.iml
+.idea/gradle.xml
+./idea/libraries/*.xml
